[gd_scene load_steps=3 format=2]

[ext_resource path="res://InfoPage.gd" type="Script" id=1]
[ext_resource path="res://Cascadia.tres" type="DynamicFont" id=2]

[node name="InfoPage" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
centered = false

[node name="MenuButton" type="Button" parent="."]
margin_left = 225.0
margin_top = 450.0
margin_right = 375.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="TitleLabel" type="Label" parent="."]
margin_left = 225.0
margin_top = 50.0
margin_right = 375.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "title"
align = 1
valign = 1

[node name="BodyLabel" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 150.0
margin_right = 500.0
margin_bottom = 400.0
custom_fonts/normal_font = ExtResource( 2 )
text = "body"
[connection signal="button_up" from="MenuButton" to="." method="_on_MenuButton_button_up"]
